fixed overflow issue of list of users overflowing

--- a/static/css/direct_messaging.css
+++ b/static/css/direct_messaging.css
@@ -69,6 +69,7 @@ footer {
     top: 0;
     padding: 20px;
     z-index: 7;
+    overflow: scroll;
 }
 
 /* .chat-app .chat {
